--- a/html/user/MerchantEntry_win.html
+++ b/html/user/MerchantEntry_win.html
@@ -43,7 +43,7 @@ apiready = function(){
     })
 };
 function fnopEneter() {
-  // 打开商家入驻平台
+  // 打开企业入驻平台
   api.openWin({
       name: 'EnterpriseEntry_win',
       url: './EnterpriseEntry_win.html',
