--- a/index.html
+++ b/index.html
@@ -124,7 +124,6 @@ apiready = function () {
     initEventListenner();
     api.parseTapmode();
 }
-var userInfo= $api.getStorage('userInfo');
 function funIniGroup(index){
     var eHeaderLis = $api.domAll('header li'),
         set = $api.byId('set'),
@@ -132,6 +131,7 @@ function funIniGroup(index){
     for (var i = 0,len = eHeaderLis.length; i < len; i++) {
               // 判断是否登陆
               // 从缓存中获取用户信息
+              var userInfo= $api.getStorage('userInfo');
               var url = './html/frame'+i+'.html';
               if(i == 4 && !userInfo){
                 url = './html/userWindow.html';
@@ -213,8 +213,13 @@ function initEventListenner() {
     api.addEventListener({
        name:'offline'
      }, function(ret, err){
-      alert('断网了');
-    });
+        api.toast({
+            msg: '网络错误',
+            duration: 2000,
+            location: 'bottom'
+        });
+
+    }); 
 }
 // 打开个人中心设置窗口
   function fnopenSetting() {
@@ -226,4 +231,5 @@ function initEventListenner() {
       }
   });
   }
+
 </script>
