--- a/html/Fabu/DzRelease.html
+++ b/html/Fabu/DzRelease.html
@@ -11,7 +11,7 @@
         <a class="aui-btn aui-pull-left" tapmode onclick="closeWin()">
             <span class="aui-iconfont aui-icon-left"></span>
         </a>
-        <div class="aui-title">短租发布</div>
+        <div class="aui-title">求租发布</div>
     </header>
 </body>
 <script type="text/javascript" src="../../script/api.js"></script>
