--- a/html/login_frame.html
+++ b/html/login_frame.html
@@ -255,17 +255,48 @@ function fnopenIndex() {
 // 微信登陆
 function fnopenwxLogin() {
   var wx = api.require('wx');
-  wx.shareText({
-      apiKey: 'wx2ce3f886b53cd360',
-      scene: 'timeline',
-      text: '我分享的文本'
-  }, function(ret, err) {
-      if (ret.status) {
-          alert('分享成功');
-      } else {
-          alert(err.code);
-      }
-  });
+    var code = '';
+ wx.isInstalled(function(ret, err) {
+     if (!ret.installed) {
+         alert("当前设备未安装微信客户端");
+     } else {
+       wx.auth({
+         apiKey: 'wx2ce3f886b53cd360'
+     }, function(ret, err) {
+         if (ret.status) {
+             wx.getToken({
+             apiKey: 'wx2ce3f886b53cd360',
+             apiSecret: 'f3d0923f96cfe04a56234e3983328e1c',
+             code: ret.code
+         }, function(ret, err) {
+             if (ret.status) {
+                api.showProgress({
+                             style: 'default',
+                             animationType: 'fade',
+                             title: '授权成功',
+                             text: '绑定处理中...',
+                             modal: true
+                         });
+                          wx.getUserInfo({
+                             accessToken: ret.accessToken,
+                             openId: ret.openId
+                         }, function(ret, err) {
+                             if (ret.status) {
+                                 // 绑定成功
+                                 alert(ret.openid);
+                                 api.hideProgress();
+
+
+                             }
+                         });
+             } else {
+                 alert(err.code);
+             }
+         });
+       }
+     });
+     }
+ });
 }
 </script>
 
