--- a/html/login_frame.html
+++ b/html/login_frame.html
@@ -283,7 +283,7 @@ function fnopenwxLogin() {
                          }, function(ret, err) {
                              if (ret.status) {
                                  // 绑定成功
-                                 alert(JSON.stringif(ret));
+                                 alert(JSON.stringify( ret ));
                                  api.hideProgress();
                              }
                          });
@@ -296,25 +296,25 @@ function fnopenwxLogin() {
      }
  });
 }
-function WXbindAccount(参数1) {
-    api.ajax({
-        url: '接口',
-        method: 'get',
-        data: {
-            values: {
-                openid: 参数,
-            }
-        }
-    }, function(ret, err) {
-        if (ret.retCode == 200) {
-        	$api.setStorage("保存当前user",ret.data);
-        	api.closeWin({
-            	name:"login"
-            });
-        	return true;
-        }
-    });
-}
+// function WXbindAccount(参数1) {
+//     api.ajax({
+//         url: '接口',
+//         method: 'get',
+//         data: {
+//             values: {
+//                 openid: 参数,
+//             }
+//         }
+//     }, function(ret, err) {
+//         if (ret.retCode == 200) {
+//         	$api.setStorage("保存当前user",ret.data);
+//         	api.closeWin({
+//             	name:"login"
+//             });
+//         	return true;
+//         }
+//     });
+// }
 </script>
 
 </html>
