--- a/html/login_frame.html
+++ b/html/login_frame.html
@@ -283,7 +283,7 @@ function fnopenwxLogin() {
                          }, function(ret, err) {
                              if (ret.status) {
                                  // 绑定成功
-                                 alert(JSON.stringify( ret ));
+                                 WXbindAccount(ret);
                                  api.hideProgress();
                              }
                          });
@@ -296,25 +296,26 @@ function fnopenwxLogin() {
      }
  });
 }
-// function WXbindAccount(参数1) {
-//     api.ajax({
-//         url: '接口',
-//         method: 'get',
-//         data: {
-//             values: {
-//                 openid: 参数,
-//             }
-//         }
-//     }, function(ret, err) {
-//         if (ret.retCode == 200) {
-//         	$api.setStorage("保存当前user",ret.data);
-//         	api.closeWin({
-//             	name:"login"
-//             });
-//         	return true;
-//         }
-//     });
-// }
+function WXbindAccount(ret) {
+    api.ajax({
+        url: 'http://lhtcshop.com/public/index/Index/get_wxinfo',
+        method: 'post',
+        data: {
+            values: {
+                openid: ret,
+            }
+        }
+    }, function(ret, err) {
+          alert(ret)
+        if (ret.code == 'success') {
+        	$api.setStorage("userInfo",ret.data);
+        	api.closeWin({
+            	name:"login"
+            });
+        	return true;
+        }
+    });
+}
 </script>
 
 </html>
